; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-orion/extr_gpio.c_orion_gpio_get_value.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-orion/extr_gpio.c_orion_gpio_get_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_chip = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gpio_chip*, i32)* @orion_gpio_get_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @orion_gpio_get_value(%struct.gpio_chip* %0, i32 %1) #0 {
  %3 = alloca %struct.gpio_chip*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.gpio_chip* %0, %struct.gpio_chip** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @GPIO_IO_CONF(i32 %6)
  %8 = call i32 @readl(i32 %7)
  %9 = load i32, i32* %4, align 4
  %10 = and i32 %9, 31
  %11 = shl i32 1, %10
  %12 = and i32 %8, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %22

14:                                               ; preds = %2
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @GPIO_DATA_IN(i32 %15)
  %17 = call i32 @readl(i32 %16)
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @GPIO_IN_POL(i32 %18)
  %20 = call i32 @readl(i32 %19)
  %21 = xor i32 %17, %20
  store i32 %21, i32* %5, align 4
  br label %26

22:                                               ; preds = %2
  %23 = load i32, i32* %4, align 4
  %24 = call i32 @GPIO_OUT(i32 %23)
  %25 = call i32 @readl(i32 %24)
  store i32 %25, i32* %5, align 4
  br label %26

26:                                               ; preds = %22, %14
  %27 = load i32, i32* %5, align 4
  %28 = load i32, i32* %4, align 4
  %29 = and i32 %28, 31
  %30 = ashr i32 %27, %29
  %31 = and i32 %30, 1
  ret i32 %31
}

declare dso_local i32 @readl(i32) #1

declare dso_local i32 @GPIO_IO_CONF(i32) #1

declare dso_local i32 @GPIO_DATA_IN(i32) #1

declare dso_local i32 @GPIO_IN_POL(i32) #1

declare dso_local i32 @GPIO_OUT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
